<resources>
    <string name="api_tester_title">API Tester</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fact_api_credit">Powered by https://uselessfacts.jsph.pl/</string>
    <string name="trivia_api_credit">Powered by https://opentdb.com/</string>
    <string name="new_fact">New Fact</string>
    <string name="post_game_prompt">Return to Home</string>
    <string name="correct">CORRECT</string>
    <string name="incorrect">INCORRECT</string>
    <string name="next_question">Next Question</string>
    <string name="zero">0</string>
    <string name="trivia_answer_label">Answer</string>
    <string name="trivia_question_label">Question</string>
    <string name="select_an_answer">Select an Answer</string>
    <string name="difficulty">Difficulty</string>
    <string name="category">Category</string>
    <string name="default_num_questions">5</string>
    <string name="search_poke_id">Search Pokedex ID</string>
    <string name="poke_weight">%1$d KG</string>
    <string name="poke_height">%1$d M</string>
    <string name="poke_id">#%1$d</string>
    <string name="height_label">Height</string>
    <string name="weight_label">Weight</string>
    <string name="types">Types</string>
    <string name="hp">HP</string>
    <string name="atk">ATK</string>
    <string name="def">DEF</string>
    <string name="sp_atk">SP ATK</string>
    <string name="sp_def">SP DEF</string>
    <string name="spd">SPD</string>

    <string-array name="trivia_categories">
        <item>Any</item>
        <item>General Knowledge</item>
        <item>Entertainment: Books</item>
        <item>Entertainment: Film</item>
        <item>Entertainment: Music</item>
        <item>Entertainment: Musicals and Theatres</item>
        <item>Entertainment: Television</item>
        <item>Entertainment: Video Games</item>
        <item>Entertainment: Board Games</item>
        <item>Science and Nature</item>
        <item>Science: Computers</item>
        <item>Science: Mathematics</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Vehicles</item>
        <item>Comics</item>
        <item>Science: Gadgets</item>
        <item>Anime and Manga</item>
        <item>Cartoons and Animations</item>
    </string-array>

    <string-array name="trivia_difficulties">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
</resources>