<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25">

        <TextView
            android:id="@+id/numberQuestionsSelectorLabelTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/questionCountStepper"
            android:layout_alignParentTop="true"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:text="Questions"
            android:textSize="@dimen/standardLabelSize"/>

        <com.cwong51799.core.CustomStepperView
            android:id="@+id/questionCountStepper"
            android:layout_width="283dp"
            android:layout_height="88dp"
            android:layout_centerInParent="true" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25">

        <TextView
            android:id="@+id/categorySelectorLabelTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_above="@id/categorySelectorSpinner"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/category"
            android:textSize="@dimen/standardLabelSize" />

        <Spinner
            android:id="@+id/categorySelectorSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:entries="@array/trivia_categories" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25">

        <TextView
            android:id="@+id/difficultySelectorLabelTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:layout_above="@id/difficultySelectorSpinner"
            android:layout_alignParentTop="true"
            android:text="@string/difficulty"
            android:textSize="@dimen/standardLabelSize" />

        <Spinner
            android:id="@+id/difficultySelectorSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:entries="@array/trivia_difficulties" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            android:id="@+id/triviaDatabaseCred"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trivia_api_credit"
         />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">

        <Button
            android:id="@+id/startTriviaBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text="Begin Trivia" />
    </RelativeLayout>
</LinearLayout>